overflow cls fix

--- a/app/global.css
+++ b/app/global.css
@@ -20,6 +20,8 @@
 
 html {
   min-width: 360px;
+  overflow-x: hidden;
+  margin-right: calc(-1 * (100vw - 100%));
 }
 
 .prose .anchor {
